# artifacts/api-server/src/routes/index.ts
@@ -4,10 +4,12 @@ import quizzesRouter from "./quizzes";
 import questionsRouter from "./questions";
 import quizAttemptsRouter from "./quiz-attempts";
 import userProgressRouter from "./user-progress";
+import categoriesRouter from "./categories";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(categoriesRouter);
 router.use(quizzesRouter);
 router.use(questionsRouter);
 router.use(quizAttemptsRouter);
