# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./quizzes";
 export * from "./questions";
 export * from "./quiz_attempts";
+export * from "./categories";
